Made an example article in tech-blog.html, Made a list on homepage to cover the competencies, Fixed a text wrap issue for my navigation buttons.

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,7 @@ body {
   margin: auto;
   box-sizing: border-box;
   background-color: rgb(38, 68, 95);
+  word-wrap: break-word;
 }
 
 /* Below is my grid stuff, I made it mobile responsive first*/
@@ -42,6 +43,7 @@ body {
 }
 
 .article-format {
+  margin-top: 2rem;
   display: grid;
   border-radius: 0.5rem;
   border: 2px solid rgb(24, 24, 24);
@@ -112,7 +114,7 @@ footer {
   border-radius: 0.5rem;
   margin: 2rem auto;
   text-decoration: none;
-  min-width: 8rem;
+  min-width: 9rem;
   max-width: 30%;
   justify-self: center;
   background-color: rgb(51, 51, 51);
@@ -131,6 +133,12 @@ footer {
   color: black;
 }
 
+li,
+p {
+  margin-bottom: 1.2rem;
+  text-wrap: 1rem;
+}
+
 /* Tablet view of webpage*/
 @media only screen and (min-width: 48rem) {
   .container {
@@ -140,16 +148,16 @@ footer {
 
   .header {
     display: grid;
-    grid-template-columns: 1fr 0.5fr 0.5fr 0.5fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 'logo home tech-blog hs-blog';
     align-items: center;
-    justify-content: center;
+    justify-content: right;
     line-height: 0.5rem;
   }
 
   .button {
-    margin-left: 1rem;
+    margin-right: 1rem;
     min-width: none;
   }
 
@@ -194,8 +202,18 @@ footer {
     margin-right: 12rem;
   }
 
+  .article-format {
+    margin-left: 10rem;
+    margin-right: 10rem;
+  }
+
   .article-button {
     grid-area: a-button;
     margin: 1rem;
+  }
+
+  .center {
+    text-align: center;
+    list-style-position: inside;
   }
 }
